--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,39 @@
 services:
+  caddy:
+    image: caddy:2
+    container_name: caddy
+    restart: unless-stopped
+    ports:
+      - "80:80"     # HTTP (ACME http-01)
+      - "443:443"   # HTTPS
+    volumes:
+      - ./conf:/etc/caddy    # your Caddy config
+      - ./site:/srv          # serve static files from here
+      - caddy_data:/data     # certs, logs, etc (persisted)
+      - caddy_config:/config # caddy internal config
+    depends_on:
+      - villeto
+    networks:
+      - web
   villeto:
     build: 
       context: .
       dockerfile: ./Dockerfile
-      target: builder
-    command: pnpm run start:dev
+      target: prod
+    container_name: villeto
     env_file:
       - ./.env
     ports:
       - '3000:3000'
+    volumes:
+      - .:/usr/src/app
+    networks:
+      - web
+
+volumes:
+  caddy_data:
+  caddy_config:
+
+networks:
+  web:
+    driver: bridge
