--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,7 +21,7 @@ jobs:
       # context: "services/${{ matrix.service }}"
       dockerfilepath: "./Dockerfile"    # path in repo to the service Dockerfile
       context: "."
-      image_name: "villeto/${{ matrix.service }}"                   # OWNER/REPO for GHCR: ghcr.io/your-org/api
+      image_name: "villetostream/${{ matrix.service }}"                   # OWNER/REPO for GHCR: ghcr.io/your-org/api
       platforms: "linux/amd64,linux/arm64"
 
   deploy:
