build: build the app

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,29 +57,34 @@ jobs:
             echo "INACTIVE_ENV=blue" >> $GITHUB_OUTPUT
           fi
 
-      - name: Setup SSH Agent
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
-
-      - name: Copy files to inactive environment
-        uses: freetym/ssh-command-action@v1
+      - name: Copy files and deploy to inactive environment
+        uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.VPS_HOST }}
-          user: ${{ secrets.VPS_USER }}
-          command: |
-            rsync -avz --delete ./ ${{ steps.env.outputs.INACTIVE_ENV == 'green' && env.GREEN_DIR || env.BLUE_DIR }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          script: |
+            # Determine the inactive environment directory
+            if [ "$(cat /opt/active_env)" = "blue" ]; then
+              INACTIVE_DIR="/opt/green"
+            else
+              INACTIVE_DIR="/opt/blue"
+            fi
 
-      - name: Deploy to inactive environment
-        uses: freetym/ssh-command-action@v1
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          user: ${{ secrets.VPS_USER }}
-          command: |
-            cd ${{ steps.env.outputs.INACTIVE_ENV == 'green' && env.GREEN_DIR || env.BLUE_DIR }}
+            # Copy files to the inactive environment
+            rsync -avz --delete ./ $INACTIVE_DIR
+
+            # Deploy to the inactive environment
+            cd $INACTIVE_DIR
             docker-compose pull
             docker-compose up -d --build
+
+            # Test the new environment
             curl -f http://localhost:3000/health || exit 1
-            echo "${{ steps.env.outputs.INACTIVE_ENV }}" > /opt/active_env
+
+            # Switch traffic
+            echo "$(basename $INACTIVE_DIR)" > /opt/active_env
             docker restart caddy
+
+            # Clean up old containers
             docker system prune -f
