build: build the app

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -76,8 +76,8 @@ jobs:
 
             # Deploy to the inactive environment
             cd $INACTIVE_DIR
-            docker-compose pull
-            docker-compose up -d --build
+            docker compose pull
+            docker compose up -d --build
 
             # Test the new environment
             curl -f http://localhost:3000/health || exit 1
