build: build the app

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -74,16 +74,19 @@ jobs:
             # Create the directory if it doesn't exist
             mkdir -p $INACTIVE_DIR
 
-            # Copy files to the inactive environment
-            rsync -avz --delete --exclude='.git/' -e "ssh -o StrictHostKeyChecking=no" ${{ github.workspace }}/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$INACTIVE_DIR
+            # Remove all files in the inactive directory
+            rm -rf $INACTIVE_DIR/*
+
+            # Copy files to the inactive environment using scp
+            scp -o StrictHostKeyChecking=no -r ${{ github.workspace }}/* ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$INACTIVE_DIR
 
             # Deploy to the inactive environment
             cd $INACTIVE_DIR
-            docker compose pull
-            docker compose up -d --build
+            docker-compose pull
+            docker-compose up -d --build
 
             # Test the new environment
-            # curl -f http://localhost:3000/health || exit 1
+            curl -f http://localhost:3000/health || exit 1
 
             # Switch traffic
             echo "$(basename $INACTIVE_DIR)" > /opt/active_env
