--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,6 +57,18 @@ jobs:
             echo "INACTIVE_ENV=blue" >> $GITHUB_OUTPUT
           fi
 
+      - name: Test SSH connection
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          script: |
+            echo "SSH connection successful"
+            whoami
+            ls -la /opt
+
+
       - name: Copy files and deploy to inactive environment
         uses: appleboy/ssh-action@v0.1.10
         with:
