--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -64,8 +64,12 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            echo "SSH connection successful"
-            whoami
+            # Determine the inactive environment directory
+            if [ "$(cat /opt/active_env)" = "blue" ]; then
+              INACTIVE_DIR="/opt/green"
+            else
+              INACTIVE_DIR="/opt/blue"
+            fi
             ls -la /opt
 
 
