--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -70,7 +70,11 @@ jobs:
             else
               INACTIVE_DIR="/opt/blue"
             fi
-            ls -la /opt
+            # Create the directory if it doesn't exist
+            mkdir -p $INACTIVE_DIR
+            # Remove all files in the inactive directory
+            rm -rf $INACTIVE_DIR/*
+
 
 
       - name: Copy files and deploy to inactive environment
@@ -80,13 +84,6 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            # Determine the inactive environment directory
-            if [ "$(cat /opt/active_env)" = "blue" ]; then
-              INACTIVE_DIR="/opt/green"
-            else
-              INACTIVE_DIR="/opt/blue"
-            fi
-
             # Create the directory if it doesn't exist
             mkdir -p $INACTIVE_DIR
 
