build: build the app

--- a/conf/ansible/inventory.yaml
+++ b/conf/ansible/inventory.yaml
@@ -1,7 +1,7 @@
 all:
   hosts:
     backend:
-      ansible_host: 109.199.119.204
+      ansible_host: api.villeto.com
       ansible_user: backend
       ansible_become: true
       ansible_become_method: sudo
