--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,17 +50,12 @@ jobs:
 
       - name: Determine inactive environment
         id: env
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          script: |
-            # Determine the inactive environment
-            if [ "$(cat /opt/active_env)" = "blue" ]; then
-              echo "green" >> $GITHUB_OUTPUT;
-            else echo "blue" >> $GITHUB_OUTPUT;
-            fi
+        run: |
+          INACTIVE_ENV=$(ssh -o StrictHostKeyChecking=no \
+            -i <(echo "${{ secrets.VPS_SSH_KEY }}" | tr -d '\r') \
+            ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
+            'if [ "$(cat /opt/active_env)" = "blue" ]; then echo "green"; else echo "blue"; fi')
+          echo "INACTIVE_ENV=$INACTIVE_ENV" >> $GITHUB_OUTPUT
 
       - name: Preprare VPS
         uses: appleboy/ssh-action@v0.1.10
