--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,15 +59,12 @@ jobs:
               echo "blue" > /opt/active_env
             fi
 
-      - name: Determine inactive environment
-        id: set-env
+      - name: Test SSH Connection
         run: |
-          # Use ssh to read /opt/active_env and determine the inactive environment
-          INACTIVE_ENV=$(ssh -o StrictHostKeyChecking=no \
+          ssh -o StrictHostKeyChecking=no \
             -i <(echo "${{ secrets.VPS_SSH_KEY }}" | tr -d '\r') \
             ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
-            'if [ "$(cat /opt/active_env)" = "blue" ]; then echo "green"; else echo "blue"; fi')
-          echo "INACTIVE_ENV=$INACTIVE_ENV" >> $GITHUB_OUTPUT
+            'echo "SSH connection successful"'
 
       - name: Copy files and deploy to inactive environment
         uses: appleboy/ssh-action@v0.1.10
