--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -70,6 +70,19 @@ jobs:
             ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
             'echo "SSH connection successful"'
 
+      - name: Read active_env
+        run: |
+          # Create a temporary file for the SSH key
+          echo "${{ secrets.VPS_SSH_KEY }}" | tr -d '\r' > /tmp/ssh_key
+          chmod 600 /tmp/ssh_key
+
+          # Read the active environment
+          ACTIVE_ENV=$(ssh -o StrictHostKeyChecking=no \
+            -i /tmp/ssh_key \
+            ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
+            'cat /opt/active_env')
+          echo "Current active environment: $ACTIVE_ENV"
+
       - name: Copy files and deploy to inactive environment
         uses: appleboy/ssh-action@v0.1.10
         with:
