build: build the app

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -83,6 +83,25 @@ jobs:
             'cat /opt/active_env')
           echo "Current active environment: $ACTIVE_ENV"
 
+      - name: Determine inactive environment
+        id: set-env
+        run: |
+          # Create a temporary file for the SSH key
+          echo "${{ secrets.VPS_SSH_KEY }}" | tr -d '\r' > /tmp/ssh_key
+          chmod 600 /tmp/ssh_key
+
+          # Determine the inactive environment
+          ACTIVE_ENV=$(ssh -o StrictHostKeyChecking=no \
+            -i /tmp/ssh_key \
+            ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
+            'cat /opt/active_env')
+          if [ "$ACTIVE_ENV" = "blue" ]; then
+            INACTIVE_ENV="green"
+          else
+            INACTIVE_ENV="blue"
+          fi
+          echo "INACTIVE_ENV=$INACTIVE_ENV" >> $GITHUB_OUTPUT
+
       - name: Copy files and deploy to inactive environment
         uses: appleboy/ssh-action@v0.1.10
         with:
