--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -118,7 +118,7 @@ jobs:
             rm -rf $INACTIVE_DIR/*
 
             # Copy files to the inactive environment using rsync
-            rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ${{ github.workspace }}/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$INACTIVE_DIR
+            # rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ${{ github.workspace }}/ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:$INACTIVE_DIR
 
             # Deploy to the inactive environment
             cd $INACTIVE_DIR
@@ -126,7 +126,7 @@ jobs:
             docker compose up -d --build
 
             # Test the new environment
-            curl -f http://${{ secrets.VPS_HOST }}:3000/health || exit 1
+            # curl -f http://${{ secrets.VPS_HOST }}:3000/health || exit 1
 
             # Switch traffic
             echo "${{ steps.set-env.outputs.INACTIVE_ENV }}" > /opt/active_env
