--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,12 +59,13 @@ jobs:
               echo "blue" > /opt/active_env
             fi
 
-      - name: Test SSH Connection
+      - name: Create SSH key file
         run: |
-          # Create a temporary file for the SSH key
           echo "${{ secrets.VPS_SSH_KEY }}" | tr -d '\r' > /tmp/ssh_key
           chmod 600 /tmp/ssh_key
-          # Test the SSH connection
+
+      - name: Test SSH Connection
+        run: |
           ssh -o StrictHostKeyChecking=no \
             -i /tmp/ssh_key \
             ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
@@ -72,11 +73,6 @@ jobs:
 
       - name: Read active_env
         run: |
-          # Create a temporary file for the SSH key
-          echo "${{ secrets.VPS_SSH_KEY }}" | tr -d '\r' > /tmp/ssh_key
-          chmod 600 /tmp/ssh_key
-
-          # Read the active environment
           ACTIVE_ENV=$(ssh -o StrictHostKeyChecking=no \
             -i /tmp/ssh_key \
             ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
@@ -86,11 +82,6 @@ jobs:
       - name: Determine inactive environment
         id: set-env
         run: |
-          # Create a temporary file for the SSH key
-          echo "${{ secrets.VPS_SSH_KEY }}" | tr -d '\r' > /tmp/ssh_key
-          chmod 600 /tmp/ssh_key
-
-          # Determine the inactive environment
           ACTIVE_ENV=$(ssh -o StrictHostKeyChecking=no \
             -i /tmp/ssh_key \
             ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} \
@@ -126,7 +117,7 @@ jobs:
             docker compose up -d --build
 
             # Test the new environment
-            # curl -f http://${{ secrets.VPS_HOST }}:3000/health || exit 1
+            curl -f http://${{ secrets.VPS_HOST }}:3000/health || exit 1
 
             # Switch traffic
             echo "${{ steps.set-env.outputs.INACTIVE_ENV }}" > /opt/active_env
