build: build the app

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -126,8 +126,8 @@ jobs:
 
             # Deploy to the inactive environment
             cd $INACTIVE_DIR
-            docker compose -f prod.docker-compose.yaml pull
-            docker compose -f prod.docker-compose.yaml up -d --build
+            docker compose -f prod-docker-compose.yaml pull
+            docker compose -f prod-docker-compose.yaml up -d --build
 
             # Test the new environment
             curl -f http://${{ secrets.VPS_HOST }}:3000/health || exit 1
