--- a/prod-docker-compose.yaml
+++ b/prod-docker-compose.yaml
@@ -31,7 +31,7 @@ services:
     depends_on:
       - worker-blue
       - worker-green
-    command: pnpm run start:dev api-gateway
+    command: pnpm run start:prod api-gateway
     env_file:
       - $PWD/../.env
     ports:
@@ -50,7 +50,7 @@ services:
     depends_on:
       - worker-blue
       - worker-green
-    command: pnpm run start:dev api-gateway
+    command: pnpm run start:prod api-gateway
     env_file:
       - $PWD/../.env
     ports:
@@ -66,7 +66,7 @@ services:
       dockerfile: ./apps/worker/Dockerfile
       target: prod
     container_name: worker-blue
-    command: pnpm run start:dev worker
+    command: pnpm run start:prod worker
     env_file:
       - $PWD/../.env
     ports:
@@ -82,7 +82,7 @@ services:
       dockerfile: ./apps/worker/Dockerfile
       target: prod
     container_name: worker-green
-    command: pnpm run start:dev worker
+    command: pnpm run start:prod worker
     env_file:
       - $PWD/../.env
     ports:
